# oscillograph

./: README.md  oscillograph-core.cabal  ui.glade
app/: Main.hs
src/Oscillograph/: Gui.hs
test/: Spec.hs
