name: oscillograph-core
version: 0.1
synopsis: A simple toy app.
description: A simple toy app.
homepage: https://github.com/A1-Triard/oscillograph#readme
license: Apache
license-file: LICENSE
author: Warlock
maintainer: internalmike@gmail.com
copyright: 2017 Warlock
category: Web
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules: Lib
  build-depends: base >= 4.7 && < 5
  default-extensions: BangPatterns
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , EmptyCase
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , ExplicitForAll
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , LiberalTypeSynonyms
                    , MagicHash
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NegativeLiterals
                    , OverloadedStrings
                    , ParallelListComp
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TransformListComp
                    , TypeFamilies
                    , TypeOperators
                    , UnboxedTuples
                    , UnicodeSyntax
                    , ViewPatterns
  include-dirs: include
  ghc-options: -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports -fprint-potential-instances
  default-language: Haskell2010

executable oscillograph
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
               , oscillograph-core
  default-extensions: BangPatterns
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , EmptyCase
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , ExplicitForAll
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , LiberalTypeSynonyms
                    , MagicHash
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NegativeLiterals
                    , OverloadedStrings
                    , ParallelListComp
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TransformListComp
                    , TypeFamilies
                    , TypeOperators
                    , UnboxedTuples
                    , UnicodeSyntax
                    , ViewPatterns
  include-dirs: include
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports -fprint-potential-instances
  default-language: Haskell2010

test-suite oscillograph-core-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base
               , HUnit
               , oscillograph-core
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-extensions: BangPatterns
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , EmptyCase
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , ExplicitForAll
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , LiberalTypeSynonyms
                    , MagicHash
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NegativeLiterals
                    , OverloadedStrings
                    , ParallelListComp
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TransformListComp
                    , TypeFamilies
                    , TypeOperators
                    , UnboxedTuples
                    , UnicodeSyntax
                    , ViewPatterns
  include-dirs: include
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports -fprint-potential-instances
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/A1-Triard/oscillograph
